# neural-threads

./: CMakeLists.txt  README.md  layer.cpp  layer.h  main.cpp  network.cpp  network.h  networkbuilder.cpp  networkbuilder.h  neural-threads.kdev4  neuron.cpp  neuron.h
.kdev4/: neural-threads.kdev4
tests/: tests_simple.cpp
